extras/kubernetes/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &myLabels
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels: *myLabels
  template:
    metadata:
      labels: *myLabels
    spec:
      volumes:
        - name: rabbitmq-conf
          configMap:
            name: rabbitmq
            defaultMode: 0777
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 15672
            - containerPort: 5672
              name: default
          volumeMounts:
            - mountPath: /etc/rabbitmq/rabbitmq.conf
              subPath: rabbitmq.conf
              name: rabbitmq-conf
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  labels: &myLabels
    app: rabbitmq
spec:
  selector: *myLabels
  ports:
    - protocol: "TCP"
      port: 5672
      targetPort: default
