extras/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "voting"
spec:
  rules:
    - host: voting.marcolino.dev.br
      http:
        paths:
          - path: /api
            backend:
              service:
                name: golang
                port:
                  number: 80
            pathType: Prefix
          - path: /events
            backend:
              service:
                name: nodejs-event-api
                port:
                  number: 80
            pathType: Prefix
          - path: /
            backend:
              service:
                name: react-ui
                port:
                  number: 80
            pathType: Prefix
  tls:
    - hosts:
        - voting.marcolino.dev.br
      secretName: certificates
